rally_point functionality added haven't observed any bugs yet

--- a/Ladder/Settings.ini
+++ b/Ladder/Settings.ini
@@ -1,6 +1,6 @@
 [LadderGUI]
-StarcraftExe=D:\StarCraft II\Versions\Base69232\SC2.exe
-LadderManagerExe=C:\Users\tqwan\Downloads\Ladder\Ladder\Sc2LadderServer.exe
+StarcraftExe=F:\StarCraft II\Versions\Base69232\SC2_x64.exe
+LadderManagerExe=E:\CMPUT\350\prj\SC2Bot\Ladder\Ladder\Sc2LadderServer.exe
 Iterations=1
 Maps=CactusValleyLE.SC2Map
 Player1=HumanTerran
