--- a/Ladder/Settings.ini
+++ b/Ladder/Settings.ini
@@ -1,7 +1,7 @@
 [LadderGUI]
-StarcraftExe=F:\StarCraft II\Versions\Base69232\SC2_x64.exe
-LadderManagerExe=E:\CMPUT\350\prj\SC2Bot\Ladder\Ladder\Sc2LadderServer.exe
+StarcraftExe=D:\steam\StarCraft II\Versions\Base70154\SC2_x64.exe
+LadderManagerExe=D:\SC2_AI\SC2Bot\Ladder\Ladder\Sc2LadderServer.exe
 Iterations=1
 Maps=CactusValleyLE.SC2Map
-Player1=HumanTerran
-Player2=Feeder
+Player1=Feeder
+Player2=HumanZerg
