--- a/Ladder/Settings.ini
+++ b/Ladder/Settings.ini
@@ -3,5 +3,5 @@ StarcraftExe=D:\steam\StarCraft II\Versions\Base70154\SC2_x64.exe
 LadderManagerExe=D:\SC2_AI\SC2Bot\Ladder\Ladder\Sc2LadderServer.exe
 Iterations=1
 Maps=CactusValleyLE.SC2Map
-Player1=Feeder
-Player2=HumanZerg
+Player1=HumanProtoss
+Player2=Feeder
