--- a/CryptBot.vcxproj
+++ b/CryptBot.vcxproj
@@ -208,6 +208,9 @@
   <ItemGroup>
     <ResourceCompile Include="Feeder.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="readme.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
